--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,48 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+      <a href="#" <img src="Assets/unpluggedlogo.png" alt="unplugged logo"></a>
+      <div class="header-divider"></div>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank"FAQ></a></li>
+          <li><a href="about/index.html" target="_blank"ABOUT></a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+
+  </main>
+
+  <footer>
+      <div class="content-wrapper">
+        <div class="contact">
+          <h1> Contact</h1>
+          <address>
+            <p> 555-555-555 </p>
+            <p> hello@unplugged.com</p>
+          </address>
+        </div>
+        <div class="footer-content">
+          <div class="social">
+            <div class="social-icons">
+              <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+              <p><a href="https://www.twitter.com/yoursite"></a></p>
+              <p><a href="https://www.instagram.com/yoursite"></a></p>
+            </div>
+          </div>
+         </div>
+      </div>
+
+        <div class="copyright"> 
+
+        </div>
+
+  </footer>ß
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
